--- a/index.html
+++ b/index.html
@@ -4,112 +4,223 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aawez Sayyed | Portfolio</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f172a;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background: radial-gradient(circle at top, #1e293b, #020617);
       color: #e5e7eb;
+      line-height: 1.6;
     }
+
     header {
-      padding: 60px 20px;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      background: linear-gradient(135deg, #2563eb, #1e40af);
+      padding: 40px 20px;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
+
+    .hero {
+      max-width: 800px;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(12px);
+      border-radius: 20px;
+      padding: 60px 30px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
     }
-    header p {
+
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      background: linear-gradient(90deg, #60a5fa, #38bdf8);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .hero p {
+      margin-top: 15px;
       font-size: 1.1rem;
       opacity: 0.9;
     }
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h2 {
-      color: #60a5fa;
-      margin-bottom: 15px;
-    }
-    .skills span {
+
+    .btn {
       display: inline-block;
-      background: #1e293b;
-      padding: 8px 14px;
-      border-radius: 20px;
-      margin: 6px;
-      font-size: 0.9rem;
+      margin-top: 25px;
+      padding: 12px 30px;
+      border-radius: 30px;
+      background: linear-gradient(90deg, #2563eb, #38bdf8);
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .project {
-      background: #020617;
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 15px;
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 25px rgba(56,189,248,0.4);
     }
+
+    section {
+      max-width: 1000px;
+      margin: auto;
+      padding: 80px 20px;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 30px;
+      text-align: center;
+      color: #93c5fd;
+    }
+
+    .about {
+      text-align: center;
+      max-width: 700px;
+      margin: auto;
+      opacity: 0.95;
+    }
+
+    .skills {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 15px;
+      margin-top: 30px;
+    }
+
+    .skill {
+      background: rgba(255, 255, 255, 0.06);
+      padding: 14px;
+      border-radius: 14px;
+      text-align: center;
+      backdrop-filter: blur(10px);
+      transition: transform 0.3s;
+    }
+
+    .skill:hover {
+      transform: translateY(-5px);
+    }
+
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.06);
+      padding: 25px;
+      border-radius: 18px;
+      backdrop-filter: blur(12px);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.4);
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      color: #bfdbfe;
+    }
+
+    .contact {
+      text-align: center;
+    }
+
+    .contact a {
+      display: inline-block;
+      margin: 10px 15px;
+      color: #7dd3fc;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
     footer {
       text-align: center;
-      padding: 20px;
-      background: #020617;
-      font-size: 0.9rem;
-      opacity: 0.7;
+      padding: 25px;
+      font-size: 0.85rem;
+      opacity: 0.6;
     }
-    a {
-      color: #93c5fd;
-      text-decoration: none;
+
+    @media (max-width: 600px) {
+      .hero h1 {
+        font-size: 2.3rem;
+      }
     }
   </style>
 </head>
 <body>
 
-  <header>
+<header>
+  <div class="hero">
     <h1>AAWEZ SAYYED</h1>
-    <p>BCA Final Year Student | Web Developer | Tech Enthusiast</p>
-  </header>
+    <p>BCA Final Year Student · Web Developer · Tech Enthusiast</p>
+    <a href="#contact" class="btn">Contact Me</a>
+  </div>
+</header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>
-      I am a BCA final-year student with a strong interest in web development
-      and technical support. I enjoy building web applications using PHP and
-      MySQL and continuously learning new technologies.
-    </p>
-  </section>
+<section>
+  <h2>About Me</h2>
+  <p class="about">
+    I am a BCA final-year student passionate about web development and technical
+    support. I enjoy building efficient web applications using PHP & MySQL and
+    continuously improving my skills with modern tools.
+  </p>
+</section>
 
-  <section>
-    <h2>Skills</h2>
-    <div class="skills">
-      <span>HTML</span>
-      <span>CSS</span>
-      <span>JavaScript</span>
-      <span>PHP</span>
-      <span>MySQL</span>
-      <span>Git & GitHub</span>
-      <span>Basic AI Tools</span>
-    </div>
-  </section>
+<section>
+  <h2>Skills</h2>
+  <div class="skills">
+    <div class="skill">HTML</div>
+    <div class="skill">CSS</div>
+    <div class="skill">JavaScript</div>
+    <div class="skill">PHP</div>
+    <div class="skill">MySQL</div>
+    <div class="skill">Git & GitHub</div>
+    <div class="skill">AI Tools (Basic)</div>
+  </div>
+</section>
 
-  <section>
-    <h2>Projects</h2>
-    <div class="project">
+<section>
+  <h2>Projects</h2>
+  <div class="projects">
+    <div class="card">
       <h3>Food Ordering Management System</h3>
       <p>
-        A web-based application developed using PHP and MySQL that allows users
-        to browse menus, place orders, and manage food delivery efficiently.
+        A PHP & MySQL based system for managing food orders, menus, and customers
+        with a simple and user-friendly interface.
       </p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:aawez@example.com">aawez@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/itsaawez" target="_blank">github.com/itsaawez</a></p>
-    <p>LinkedIn: <a href="#" target="_blank">Add your LinkedIn link</a></p>
-  </section>
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="contact">
+    <a href="mailto:aawez@example.com">Email</a>
+    <a href="https://github.com/itsaawez" target="_blank">GitHub</a>
+    <a href="#">LinkedIn</a>
+  </div>
+</section>
 
-  <footer>
-    © 2026 Aawez Sayyed | Portfolio
-  </footer>
+<footer>
+  © 2026 Aawez Sayyed · All rights reserved
+</footer>
 
 </body>
 </html>
+
+
+
+
