Revise portfolio details and contact links
Updated personal information and links in the portfolio.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <header>
   <div class="hero">
     <h1>AAWEZ SAYYED</h1>
-    <p>BCA Final Year Student · Web Developer · Tech Enthusiast</p>
+    <p>BBA-CA Final Year Student · Web Developer · Tech Enthusiast</p>
     <a href="#contact" class="btn">Contact Me</a>
   </div>
 </header>
@@ -173,7 +173,7 @@
 <section>
   <h2>About Me</h2>
   <p class="about">
-    I am a BCA final-year student passionate about web development and technical
+    I am a BBA-CA final-year student passionate about web development and technical
     support. I enjoy building efficient web applications using PHP & MySQL and
     continuously improving my skills with modern tools.
   </p>
@@ -208,9 +208,9 @@
 <section id="contact">
   <h2>Contact</h2>
   <div class="contact">
-    <a href="mailto:aawez@example.com">Email</a>
+    <a href="sayyedaawez.22@gmail.com">Email</a>
     <a href="https://github.com/itsaawez" target="_blank">GitHub</a>
-    <a href="#">LinkedIn</a>
+    <a href="http://linkedin.com/in/aawez-sayyed-a485293a3">LinkedIn</a>
   </div>
 </section>
 
@@ -220,6 +220,7 @@
 
 </body>
 </html>
+
 
 
 
