--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <section id="contact">
   <h2>Contact</h2>
   <div class="contact">
-    <a href="sayyedaawez.22@gmail.com">Email</a>
+    <a href="mailto:sayyedaawez.22@gmail.com">Email</a>
     <a href="https://github.com/itsaawez" target="_blank">GitHub</a>
     <a href="http://linkedin.com/in/aawez-sayyed-a485293a3">LinkedIn</a>
   </div>
@@ -220,6 +220,7 @@
 
 </body>
 </html>
+
 
 
 
